--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   min-height: 100vh;
   font-family: Dosis, sans-serif;
-  background: whitesmoke;
+  background: #333;
 }
 
 h1 {
@@ -17,6 +17,19 @@ h1 {
   margin-bottom: 15px;
   font-size: 40px;
   letter-spacing: 5px;
+}
+
+h1 {
+  color: #ffffff;
+  text-align: center;
+  margin-top: 25px;
+  margin-bottom: 15px;
+  font-size: 40px;
+  letter-spacing: 5px;
+  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px,
+    #ff2d95 0px 0px 20px, #ff2d95 0px 0px 30px, #ff2d95 0px 0px 40px,
+    #ff2d95 0px 0px 50px, #ff2d95 0px 0px 75px,
+    36px -8px 18px rgba(206, 89, 55, 0.39);
 }
 
 /* Loader */
@@ -36,8 +49,6 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
-/* Image Container */
 
 .image-container {
   margin: 10px 30%;
